syntax = "proto3";
package umee.leverage.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/umee-network/umee/v4/x/leverage/types";

option (gogoproto.goproto_getters_all) = false;

// QueryInspect defines the request structure for the Inspect gRPC service handler.
message QueryInspect {
  // Mode is a string which selects the logic behind the inspector query.
  string mode = 1;
  // Symbol optionally selects a symbol denom for query modes that allow one to be specified.
  string symbol = 2;
  // Sort is an optional string which controls how accounts are sorted.
  string sort = 3;
  // Mode minimum is the mode value below which accounts will be filtered. For example,
  // in collateral mode this is the minimum collateral value an account must have to
  // be displayed.
  string mode_min = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Sort minimum is the sorted value below which accounts will be filtered. For example,
  // in risk mode this is the minimum LTV an account must have to be displayed.
  string sort_min = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// QueryInspectNeat defines the request structure for the InspectNeat gRPC service handler.
message QueryInspectNeat {
  // Mode is a string which selects the logic behind the inspector query.
  string mode = 1;
  // Symbol optionally selects a symbol denom for query modes that allow one to be specified.
  string symbol = 2;
  // Sort is an optional string which controls how accounts are sorted.
  string sort = 3;
  // Mode minimum is the mode value below which accounts will be filtered. For example,
  // in collateral mode this is the minimum collateral value an account must have to
  // be displayed.
  string mode_min = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Sort minimum is the sorted value below which accounts will be filtered. For example,
  // in risk mode this is the minimum LTV an account must have to be displayed.
  string sort_min = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// QueryInspectResponse defines the response structure for the Inspect gRPC service handler.
message QueryInspectResponse {
  repeated BorrowerSummary borrowers = 1 [
    (gogoproto.nullable) = false
  ];
}

// QueryInspectNeatResponse defines the response structure for the InspectNeat gRPC service handler.
message QueryInspectNeatResponse {
  repeated BorrowerSummaryNeat borrowers = 1 [
    (gogoproto.nullable) = false
  ];
}

// BorrowerSummary defines a borrower's address and account health.
message BorrowerSummary {
  option (gogoproto.equal) = true;
  string address           = 1;
  // Supplied Value is the total USD value of all tokens the account has supplied, includng interest earned.
  string supplied_value = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Collateral Value is the total USD value of the account's collateral.
  string collateral_value = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Borrowed Value is the total USD value of all tokens the account has borrowed, including interest owed.
  string borrowed_value = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Borrow Limit is the maximum Borrowed Value the account is allowed to reach through direct borrowing.
  string borrow_limit = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Liquidation Threshold is the Borrowed Value at which the account becomes eligible for liquidation.
  string liquidation_threshold = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // SpecificCollateralValue is the amount of Collateral Value which is the result of a specified collateral denom.
  string specific_collateral_value = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // SpecificBorrowValue is the amount of Borrowed Value which is the result of a specified borrowed denom.
  string specific_borrow_value = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// BorrowerSummaryNeat defines a borrower's address and account health without requiring sdk.Dec formatting
message BorrowerSummaryNeat {
  option (gogoproto.equal) = true;
  string Account           = 1;
  // Borrowed is account's borrowed value, either in total or just a specified denom.
  double Borrowed = 2;
  // L is borrowed value as a portion of borrow limit.
  double L = 3;
  // T is borrowed value as a portion of liquidation threshold.
  double T = 4;
  // V is the borrowed value as a portion of collateral value.
  double V = 5;
}